fixed list alignment

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -297,13 +297,11 @@ position: absolute;
 .nav-group .greet .greet-links{
     display: flex;
     flex-direction: row;
-    align-items: end;
     justify-content: space-between;
 }
 .outergreet .greet .greet-links{
     display: flex;
     flex-direction: row;
-    align-items: end;
     justify-content: space-between;
     margin-top: -45px;
     border-top: 1px solid rgb(233, 231, 231);
